Bug 161303 - [css-align] Initial values are parsed as invalid for some Alignment properties
Summary: [css-align] Initial values are parsed as invalid for some Alignment properties
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Javier Fernandez
URL:
Keywords:
: 144444 161233 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-08-28 15:52 PDT by Javier Fernandez
Modified: 2016-09-12 04:49 PDT (History)
5 users (show)

See Also:


Attachments
Test case to reproduce the issue. (626 bytes, text/html)
2016-08-28 15:52 PDT, Javier Fernandez
no flags Details
Patch (16.83 KB, patch)
2016-08-29 16:59 PDT, Javier Fernandez
no flags Details | Formatted Diff | Diff
Patch (19.33 KB, patch)
2016-09-12 02:32 PDT, Javier Fernandez
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Javier Fernandez 2016-08-28 15:52:29 PDT
Created attachment 287241 [details]
Test case to reproduce the issue.

The CSS Box Alignment specification defines a new syntax for align-self/align-items, justify-self/justify-items and align-content/justify-content CSS properties. This new syntax include new values, some of them not valid following the old syntax defined in the CSS Flexible box specification for some of these properties. 

Due to the patch landed for fixing bug #151591 we are now sure that the parsing logic for the new syntax is only used when the CSS Grid Layout is enabled, since this new layout model defines its alignment procedures based on the mentioned CSS properties.

So, the case is that for some properties, like align-items in the attached test case, the initial value is parsed as invalid.
Comment 1 Javier Fernandez 2016-08-29 16:59:05 PDT
Created attachment 287352 [details]
Patch
Comment 2 Javier Fernandez 2016-08-30 13:50:42 PDT
*** Bug 161233 has been marked as a duplicate of this bug. ***
Comment 3 Javier Fernandez 2016-08-30 14:15:43 PDT
*** Bug 144444 has been marked as a duplicate of this bug. ***
Comment 4 Javier Fernandez 2016-09-12 02:32:56 PDT
Created attachment 288561 [details]
Patch
Comment 5 WebKit Commit Bot 2016-09-12 04:49:02 PDT
Comment on attachment 288561 [details]
Patch

Clearing flags on attachment: 288561

Committed r205807: <http://trac.webkit.org/changeset/205807>
Comment 6 WebKit Commit Bot 2016-09-12 04:49:08 PDT
All reviewed patches have been landed.  Closing bug.