Source/WebCore/rendering/RenderFlexibleBox.cpp
@@ -1398,7 +1398,11 @@ void RenderFlexibleBox::alignChildren(const Vector<LineContext>& lineContexts)
                 // yet for FlexibleBox.
                 // Defaulting to Stretch for now, as it what most of FlexBox based renders
                 // expect as default.
+#if ENABLE(CSS_GRID_LAYOUT)
                 ASSERT(RuntimeEnabledFeatures::sharedFeatures().isCSSGridLayoutEnabled());
+#else
+                ASSERT_NOT_REACHED();
+#endif
                 FALLTHROUGH;
             case ItemPositionStretch: {
                 applyStretchAlignmentToChild(*child, lineCrossAxisExtent);
@@ -1434,7 +1438,11 @@ void RenderFlexibleBox::alignChildren(const Vector<LineContext>& lineContexts)
             case ItemPositionRight:
                 // FIXME: https://webkit.org/b/135460 - The extended grammar is not supported
                 // yet for FlexibleBox.
+#if ENABLE(CSS_GRID_LAYOUT)
                 ASSERT(RuntimeEnabledFeatures::sharedFeatures().isCSSGridLayoutEnabled());
+#else
+                ASSERT_NOT_REACHED();
+#endif
                 break;
             default:
                 ASSERT_NOT_REACHED();
